Fixed spacing

--- a/src/components/companyInfo/companyInfo.css
+++ b/src/components/companyInfo/companyInfo.css
@@ -40,6 +40,7 @@
     text-align: left;
     font-size: 24px;
     font-weight: bold;
+    line-height: 1.75rem;
 }
 
 .company__content h3 {
